Fix canvas z-index in editor

--- a/blocks/color-effects/editor.scss
+++ b/blocks/color-effects/editor.scss
@@ -6,4 +6,8 @@
 		max-width: 290px;
 		width: 100%;
 	}
+
+	canvas {
+		z-index: 0;
+	}
 }
